<resources>
    <string name="app_name">The-Laend-of-Adventure</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoic2ViYXN0aWFuaGRtIiwiYSI6ImNsZzNrZHpheTBjMTIzZG4xeW9pYWloeTAifQ.KX0L4CprJOJHJkDOVX20ig</string>
    <string name="mapbox_styleURL">mapbox://styles/sebastianhdm/clh29r0j900kf01r00eage1zc</string>
    <string name="gps_negativeButton">App schließen</string>
    <string name="storage_negativeButton">Kein Bild auswählen</string>
    <string name="gps_positiveButton">Okay</string>
    <string name="storage_positiveButton">Okay</string>
    <string name="gps_required_title">GPS-Nutzung muss genehmigt werden</string>
    <string name="storage_required_title">Speicher-Nutzung sollte genehmigt werden.</string>
    <string name="gps_required_context">Das Spiel basiert auf GPS-Daten und ist ohne diese nicht lauffähig.</string>
    <string name="storage_required_context">Um Bilder auszuwählen, muss eine Speicherfreigabe gegeben werden.</string>
    <string name="image_npc">Bild NPC</string>
    <string name="badge1_image">badgeImage</string>
    <string name="badge1_name">Badge Name</string>
    <string name="badge2_image">badgeImage</string>
    <string name="badge_Goals">Badge Goals</string>
    <string name="profile_image">profile_image</string>
    <string name="profile_level">2</string>
    <string name="popup_name_NPC">Name</string>
    <string name="popup_questText">XYZ will dir eine Quest anbieten</string>
    <string name="popup_questDetails">Ort: Die Taverne \n Aufgabe: xyz</string>
    <string name="popup_declineButton">Nein</string>
    <string name="popup_acceptButton">Ja</string>
    <string name="userCreationPage_nameInputField">Name</string>
    <string name="userCreationPage_title">The Länd of Adventure</string>
    <string name="userCreationPage_confirmButton">ERSTELLEN</string>
    <string name="userCreationPage_secondaryTitle">Charaktererstellung</string>
    <string name="userCreationPage_avatarButton">Profil Avatar</string>
    <string name="userPage_name">Name</string>
    <string name="avatar">Profilbild</string>
    <string name="profileLevel">3</string>
    <string name="userPage_levelText">Level:</string>
    <string name="profileButton">Profilebutton</string>
    <string name="userPage_profileImage">Profilbild</string>
    <string name="mainPage_profileButton">Profil</string>
    <string name="player_level">3</string>
    <string name="mainPage_compass">Kompass</string>
    <string name="questpage_backgroundrectangle">questPage_backgroundRectangle</string>
    <string name="quest_progress_numeric_text">%1$d / %2$d</string>
    <string name="level_progress_numeric_text">%1$d / 100</string>
    <string name="quest2_progressNumeric">0/100</string>
    <string name="questmenu_profile">questMenu_profile</string>
    <string name="quest_name">Name</string>
    <string name="pick_from_gallery">Aus der Galerie wählen!</string>
    <string name="cancel">Abbrechen</string>
    <string name="add_image">Bild hinzufügen!</string>
    <string name="userID">userID</string>
    <string name="sharedPreferences">LaendOfAdventurePreferences</string>
    <string name="failed_to_save_image">Bild konnte nicht gespeichert werden.</string>
    <string name="profile_tab_text">Profil</string>
    <string name="badges_tab_text">Badges</string>
    <string name="quests_tab_text">Quests</string>
    <string name="badgesPage_badge1_background">badge1_background</string>
    <string name="badgesPage_badge2_background">badge2_background</string>
    <string name="badgesPage_profileButton">badgesPage_profileButton</string>
    <string name="quest_description_text">Beschreibung</string>
    <string name="npc_name">%1$s will dir eine Quest anbieten</string>
    <string name="quest_details">%1$s</string>
    <string name="quest_accept">Akzeptieren</string>
    <string name="quest_decline">Ablehnen</string>
    <string name="riddle_text">Rätsel</string>
    <string name="answer_1">Antwort_1</string>
    <string name="answer_2">Antwort_2</string>
    <string name="answer_3">Antwort_3</string>
    <string name="answer_4">Antwort_4</string>
    <string name="user_text_placeholder">User Text</string>
    <string name="partner_text_placeholder">Partner text</string>
    <string name="nextText">Weiter</string>
    <string name="userprofileimage">userProfileImage</string>
    <string name="partnerprofileimage">partnerProfileImage</string>
    <string name="partner_name">Partner name</string>
    <string name="user_name">User name</string>
    <string name="quest_accept_message">Du hast die Quest: &quot;%1$s&quot; angenommen!\n\Viel Erfolg!</string>
    <string name="quest_completed_message">Du hast die Quest: &quot;%1$s&quot; abgeschlossen!\n\nHerzlichen Glückwunsch, du erhältst 50 Erfahrungspunkte!</string>
    <string name="goal_completed_message">Du hast die Aufgabe: &quot;%1$s&quot; abgeschlossen!</string>
    <string name="badge_completed_message">Du hast die Badge: &quot;%1$s&quot; erhalten!\n\nHerzlichen Glückwunsch!</string>
    <string name="level_up_message">Du bist aufgestiegen und hast nun das %1$d. Level erreicht!\n\nEure Fähigkeiten sind beeindruckend!</string>
    <string name="image_icon">image_icon</string>
    <string name="snackbar_message">Snackbar Message</string>
    <string name="image_frame">image_frame</string>
    <string name="expand_arrow">expand arrow</string>
    <string name="resetplayerlocation">resetPlayerLocation</string>
    <string name="feather">feather</string>
    <string name="too_far_away">Du bist zu weit weg um die Quest: &quot;%1$s&quot; anzunehmen! Komm näher heran!</string>
    <string name="xp_bar">xp bar</string>
    <string name="logo">logo</string>
    <string name="pop_up_quest_name">quest name</string>
    <string name="map">map</string>
</resources>
