<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/badge_background"
        android:layout_width="270dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/badgesPage_badge1_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/badge_image"
        app:srcCompat="@drawable/badgespage_rectangle" />

    <ImageView
        android:id="@+id/badge_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_dialog"
        android:contentDescription="@string/badge1_image" />

    <TextView
        android:id="@+id/badge_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/badge1_name"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/badge_image" />


</androidx.constraintlayout.widget.ConstraintLayout>