<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/dialog_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        app:cardBackgroundColor="#D9DDDC"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Textbox für den Benutzer -->
        <LinearLayout
            android:id="@+id/userBackgroundContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/conversation_field"
            android:gravity="end"
            android:orientation="vertical"
            android:visibility="gone">

        <LinearLayout
            android:id="@+id/userTextbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="16dp"
            android:padding="8dp"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="16dp"
                android:padding="10dp"
                android:text="@string/user_name" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/userProfileImageContainer"
                        android:layout_width="68dp"
                        android:layout_height="68dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="30dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:ignore="RtlHardcoded">

                        <!-- Profilbild des Benutzer -->
                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/userProfileImage"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:contentDescription="@string/userprofileimage"
                            android:minWidth="48dp"
                            android:minHeight="48dp"
                            android:scaleType="centerCrop"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:shapeAppearanceOverlay="@style/Circular"
                            tools:srcCompat="@android:drawable/ic_menu_my_calendar" />

                        <!-- Rahmen des Profilbilds des Benutzers -->
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/frame"
                            android:contentDescription="@string/image_frame"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <!-- Text des Benutzer -->
                    <TextView
                        android:id="@+id/userTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:padding="8dp"
                        android:text="@string/user_text_placeholder" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <!-- Textbox für den Gesprächspartner -->
        <LinearLayout
            android:id="@+id/partnerBackgroundContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/conversation_field"
            android:gravity="end"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/partnerTextbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="16dp"
                android:padding="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/partnerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="16dp"
                    android:padding="8dp"
                    android:text="@string/partner_name" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/partnerProfileImageContainer"
                        android:layout_width="68dp"
                        android:layout_height="68dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="30dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:ignore="RtlHardcoded">

                    <!-- Profilbild des Gesprächpartners -->
                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/partnerProfileImage"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:contentDescription="@string/partnerprofileimage"
                        android:minWidth="48dp"
                        android:minHeight="48dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearanceOverlay="@style/Circular"
                        tools:srcCompat="@android:drawable/ic_menu_my_calendar" />

                    <!-- Rahmen des Profilbilds des Gesprächpartners -->
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/frame"
                        android:contentDescription="@string/image_frame"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <!-- Text des Gesprächspartners -->
                    <TextView
                        android:id="@+id/partnerTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:padding="8dp"
                        android:text="@string/partner_text_placeholder" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>




