<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardBackgroundColor="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/text_field_nine">

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="321dp"
                android:layout_height="7dp"
                android:progressTint="#03AC13"
                android:scaleY="2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/snackbar_image_container"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    app:layout_constraintBottom_toTopOf="@+id/user_page_level_bar"
                    app:layout_constraintDimensionRatio="1:1">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/snackbar_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="2dp"
                        android:layout_marginBottom="2dp"
                        android:contentDescription="@string/profileButton"
                        android:minWidth="48dp"
                        android:minHeight="48dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearanceOverlay="@style/Circular"
                        tools:ignore="ImageContrastCheck" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/frame"
                        android:contentDescription="@string/image_frame"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ImageContrastCheck" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/textMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:padding="8dp"
                    android:text="@string/snackbar_message"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
